# contents of pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch]
version.path = "src/example_package_misael/__init__.py"

[project]
requires-python = ">=3.8"
description= "good stuff"
readme= "README.md"
name = "example-package-misael"
version = "0.1.0"
dependencies = [
  "numpy"
]

[project.optional-dependencies]
test = ["pytest"]

